2006-06-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/base.h src/generic.cpp, src/generic.h, src/mol.h,
	src/bond.cpp: Documentation changes, including several from Carsten.

	* src/*.cpp: Remove un-needed header #includes turned up by a
	script adapted from KDE suggested by Carsten.

2006-06-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obiter.h, src/obiter.cpp: Add depth-first and breadth-first
	search iterators for atoms through an OBMol. Fixes feature request
	PR#1273213.

	* src/bitvec.h: Minor cleanup of #include paths.

2006-06-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/generic.h, src/generic.cpp (OBUnitCell): Add lattice type
	definition, requested by Carsten Niehaus and add GetCellVolume()
	method contributed by Carsten.

	* src/newlinebuf.h, src/newlinebuf.cpp: New "filtering streambuf"
	class to filter line-endings, e.g. \r\n or \r -> \n expected by
	much of the code. Fixes PR#1510008 and goes towards feature
	request PR#1499615. Currently unused until testing is complete.

	* src/Makefile.am, src/Makefile.in: Add newlinebuf.

2006-06-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.h, src/atom.cpp (CountRingBonds): New method to return
	the number of explicit ring connections to an atom.

	* src/parsmart.h, src/parsmart.cpp: Add support for Daylight 'x'
	primitive for total # of ring connections using above method.

	* test/files/smartstest.txt, test/files/smartsresults.txt:
	Test 'x' patterns above.

	* scripts/*: Regenerate to add new OBAtom::CountRingBonds()
	method.

	* src/formats/xyzformat.cpp (WriteMolecule): Only output "Energy" in
	title if it's nonzero. General cleanup.

2006-06-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Allow use of H atoms for a root
	atom when used in a cis/trans "/" or "\" specification. Make sure
	to output [H] atoms when in a cis/trans specification. Fixes
	PR#1508783. Fix part of PR#1508741 -- chiral atoms should be fine